# stocks-api

./: .env-template  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py
src/api/: __init__.py  __main__.py  schema.py
src/api/routes/: stock.py
src/cacher/: __init__.py
src/core/: exception.py
src/core/stocks/: exception.py  model.py  repository.py  schema.py  service.py
src/database/: __all_models.py  __init__.py  config.py  manager.py  model.py  repository.py
src/polygon/: __init__.py  exceptions.py  shcema.py
src/requester/: __init__.py
src/scraper/marketwatch_stock/: __init__.py  schema.py
tests/: conftest.py
tests/core/stocks/: conftest.py  test_repository.py  test_service.py
tests/polygon/: test_polygon.py
tests/scraper/: test_marketwatch_stock.py
