[project]
name = "stocks-api"
version = "0.1.0"
description = "Stocks API for CIAL DND test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "structlog>=25.2.0",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
